terraform/security_groups.tf

# 1. SSH
resource "aws_security_group" "ssh_sg" {
  name   = "ssh_sg"
  vpc_id = aws_vpc.app.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# 2. Number Inventory Service (port 8000)
resource "aws_security_group" "number_inventory_sg" {
  name   = "number_inventory_sg"
  vpc_id = aws_vpc.app.id

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# 3. Port Order Service (port 8001)
resource "aws_security_group" "port_order_sg" {
  name   = "port_order_sg"
  vpc_id = aws_vpc.app.id

  ingress {
    from_port   = 8001
    to_port     = 8001
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# 4. Kafka UI (port 8080)
resource "aws_security_group" "kafka_ui_sg" {
  name   = "kafka_ui_sg"
  vpc_id = aws_vpc.app.id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
